body sobre mim html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,40 @@
         </div>
         <img src="./img/VenicioRed.jpg" alt="Perfil Venicio">
     </section>
+    <main>
+        <article aria-label="seção sobre mim" class="sobre">
+            <div class="sobre_titulo">
+                <h1>About Me</h1>
+                <p>Profissional Profile - There is All About me</p>
+                <div aria-label="Seção apenas de ilustrações de botões">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <img src="./img/VenicioRed.jpg" alt="imagem do perfil do venicio pinheiro">
+            <div class="sobre_conteudo">
+                <div class="sobre_texto">
+                    <h1>I'm Dev saber - Venicio</h1>
+                    <p>Atualmente trabalho no Grupo Líder, como Analista de Suporte, projetando trabalhar como Desenvolvedor e Analsita de Dados
+                    Tenho muito interesse em trabalhar como Dev conheço varias liguagem de programação como JAVA, PHP, C# e SQL de banco de dado. 
+                    Buscando sempre minha evolução dentro do mercado de trabalho.
+                    <br>
+                    <br>
+                    Sou do interio de breves do Pará, ribeirinho do municipio do rio curumum, morei 14 anos no interior, aos 14 passei a morar em Belém do Pará,
+                    em Dezembro de 2006 comecei a trabalhar como Embalador no Grupo Líder Comercio e Industria Ltda, e dentro do grupo passei a montar minha carreira, em 2011,
+                    com um crescimento vertical, mudei de função, Cartazista do grupo e muito satisfeito em 2013 mudei de função novamente, Assistente de Suporte e em 2016 Analista de Suporte.
+                    E em 2018 atraves do enem passei no vestibular para Tecnologia e Analise e Desenvolvimento de Sistema do Instituto Federal do Para e Atualmente formado. 
+                    </p>
+
+                </div>
+                <div class="sobre_info">
+                    <p><i class="fa-solid fa-calendar-day">Date of birth: 24 Abril 1984</i></p>
+                    <p><i class=""></i></p>
+                </div>
+            </div>
+        </article>
+    </main>
 
     <script src="./assets/js/script.js"></script>
 </body>
