Seção About Me, e animações da seção

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -45,7 +48,7 @@
                     <span></span>
                 </div>
             </div>
-            <img src="./img/VenicioRed.jpg" alt="imagem do perfil do venicio pinheiro">
+            <img src="./img/VenicioRed.jpg" alt="imagem de perfil do venicio pinheiro">
             <div class="sobre_conteudo">
                 <div class="sobre_texto">
                     <h1>I'm Dev saber - Venicio</h1>
@@ -54,7 +57,7 @@
                     Buscando sempre minha evolução dentro do mercado de trabalho.
                     <br>
                     <br>
-                    Sou do interio de breves do Pará, ribeirinho do municipio do rio curumum, morei 14 anos no interior, aos 14 passei a morar em Belém do Pará,
+                    Sou do interio de Breves do Pará, ribeirinho do municipio do rio curumum, morei 14 anos no interior, aos 14 passei a morar em Belém do Pará,
                     em Dezembro de 2006 comecei a trabalhar como Embalador no Grupo Líder Comercio e Industria Ltda, e dentro do grupo passei a montar minha carreira, em 2011,
                     com um crescimento vertical, mudei de função, Cartazista do grupo e muito satisfeito em 2013 mudei de função novamente, Assistente de Suporte e em 2016 Analista de Suporte.
                     E em 2018 atraves do enem passei no vestibular para Tecnologia e Analise e Desenvolvimento de Sistema do Instituto Federal do Para e Atualmente formado. 
@@ -62,8 +65,13 @@
 
                 </div>
                 <div class="sobre_info">
-                    <p><i class="fa-solid fa-calendar-day">Date of birth: 24 Abril 1984</i></p>
-                    <p><i class=""></i></p>
+                    <p><i class="fa-solid fa-calendar-day"></i>Data Nascimento: 24 Abril 1984</p>
+                    <p><i class="fa-sharp fa-solid fa-laptop-code"></i>Freelance: sendo avaliado por empresas.</p>
+                    <p><i class="fa-solid fa-location-dot"></i>Endereço: Sacramenta, Belém-Pá, Brasil</p>
+                    <p><i class="fa-sharp fa-solid fa-globe"></i>Idiomas falados: Português, basico de ingles, espanhol</p>
+                    <p><i class="fa-solid fa-flag"></i>Nacionalidade: Brasileiro</p>
+                    <p><i class="fa-solid fa-phone-volume"></i>Telefone: +91 99307-4008</p>
+                    <p><i class="fa-solid fa-envelope"></i>Email: veniciopinheiro@yahoo.com.br</p>
                 </div>
             </div>
         </article>
